Fixes spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,7 +73,6 @@ body {
 -------------------------------------------------- */
 .header {
   padding: 2em;
-  margin-bottom: 1.5em;
 }
 
 .logo {
@@ -86,6 +85,7 @@ body {
 }
 
 .intro{
+  margin-top: 1.5em;
   background: url("../../content/home/home2.jpg");
   background-position: absolute;
   min-height: 600px;
@@ -148,6 +148,7 @@ body {
 }
 
 .secondmenu {
+  margin-bottom: 0.5em;
   text-align: right;
 }
 
